--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -124,7 +124,7 @@ function bindYouTubePlay(img) {
     if (p[0] && p[0].tagName === 'P') {
         var parts = splitOnFirst(splitOnLast(a.attr('href'),'/')[1],'?');
         var id = parts[0];
-        var qs = parts[1] || '';
+        var qs = (parts[1] || '').replace('t=','start=');
         var width = Math.floor(img[0].offsetWidth/2 - 43);
         var height = Math.floor(img[0].offsetHeight/2 - 31);
         var html = `<i class="youtube-play" style="width:${img[0].offsetWidth}px;height:${img[0].offsetHeight}px;background-position:${width}px ${height}px" onclick="playVideo(this,'${id}','${qs}')"></i>`;
