--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -64,14 +64,11 @@
 
 
 <script>
-//var screenWidth = $(window).width();
 // Add .active class to active link + scroll into view
-var pathinfo = location.pathname + location.hash;
-if (/*screenWidth > 768 && */ pathinfo != "/")
+if (location.pathname != "/")
 {
-    var scrollItem = $("#sidebar").find("a[href='" + pathinfo + "']")
-            .parent().addClass('active')
-            .parents().filter("div>ul>li")[0];
+    var scrollItem = findMenuItem(location.pathname + location.hash)
+        || findMenuItem(location.pathname);
 
     if (scrollItem) {
         scrollItem.scrollIntoView({
@@ -92,6 +89,12 @@ $("h2,h3,h4").click(function(){
         location.href = "#" + this.id;
     }
 });
+
+function findMenuItem(pathInfo) {
+    return $("#sidebar").find("a[href='" + pathInfo + "']")
+        .parent().addClass('active')
+        .parents().filter("div>ul>li")[0];
+}
 
 function video(url) {
     return '<iframe style="width:100%;min-height:585px" src="' + url + '" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>';
