Conditional redirect to https only in prod to make local dev fast/easy.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,9 @@
     <title>{{ page.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    {% if jekyll.environment == 'production' %}
     <script>if (location.protocol != "https:") location.protocol = "https:";</script>
+    {% endif %}
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
