--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -165,7 +165,7 @@ pre.highlight {
     display: none;
 }
 
-.tpl th {
+.text-center, .tpl th {
     text-align: center;
 }
 .tpl-desc {
@@ -193,6 +193,8 @@ pre.highlight {
     background-color: rgba(255,255,255,.1);
     cursor: pointer;
 }
+
+.text-green-500	{ --tw-text-opacity: 1; color: rgba(16, 185, 129, var(--tw-text-opacity)) }
 
 
 @media (max-width: 1580px) {
