--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -41,7 +41,9 @@
   font-size: 1.6rem !important;
   padding-left: 2.5rem;
 }
-
+.nav-links .item:last-child .nav-link { /*hide GitHub link*/
+  display: none;
+}
 
 .package-reference-box .svg-copy {
   background: #008ed6 url("data:image/svg+xml,%3Csvg fill='none' stroke='white' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='1' d='M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2'%3E%3C/path%3E%3C/svg%3E") no-repeat;
@@ -101,3 +103,17 @@
 .copy-cmd pre b { visibility: hidden; }
 .copy-cmd pre.copied b { visibility: visible; }
 .copy-cmd pre.copied i.svg-copy { opacity: 50% }
+
+.group-item[aria-selected=true], .group-item[aria-selected=true] a, .group-item[aria-selected=true] mark {
+  background-color: #42b983;
+  box-shadow: inset 0 0 0 2px #42b983;
+  cursor: pointer;
+  color: white;
+}
+.group-item a {
+  text-decoration: none;
+}
+.snippet mark {
+  background-color: unset;
+  text-decoration: underline;
+}
