--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -72,39 +72,6 @@
     white-space: normal;     
     padding-left: .5rem;
   }
-/*font-normal text-xs sm:text-sm */
-.package-reference-box pre p code {
-  color: #fff;
-  white-space: nowrap;
-  overflow: hidden;
-  line-height: 2.5em;
-}
-.package-reference-box p code {
-  margin-bottom: 0;
-  border-radius: 0;
-  border: none;
-}
-.package-reference-box .copy-text label {
-  font-weight: 400;
-  color: rgb(107, 114, 128);
-}
-.package-reference-box pre p code {
-    margin: 0;
-    padding: 0;
-}
-
-.copy-cmd i.svg-copy {
-  display: inline-block;
-  vertical-align: middle;
-  background-image: url("data:image/svg+xml,%3Csvg fill='none' stroke='currentColor' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2'%3E%3C/path%3E%3C/svg%3E");
-}
-.copy-cmd pre.sh::before {
-  content: "$ ";
-  color: #999;
-}
-.copy-cmd pre b { visibility: hidden; }
-.copy-cmd pre.copied b { visibility: visible; }
-.copy-cmd pre.copied i.svg-copy { opacity: 50% }
 
 .group-item[aria-selected=true], .group-item[aria-selected=true] a, .group-item[aria-selected=true] mark {
   background-color: #42b983;
@@ -119,3 +86,18 @@
   background-color: unset;
   text-decoration: underline;
 }
+
+
+.copied { display: none}
+.copying .copied { display: block }
+.copying .nocopy { display: none }
+
+.cp p, .cp p code { margin:0; padding:0 }
+
+.nuget-copy p, .nuget-copy p code { color:#fff }
+
+.sh-copy p, .sh-copy p code { color: rgb(243 244 246) }
+.sh-copy p::before { content:'$ '; color: rgb(156 163 175) }
+.sh-copy a { color: rgb(243 244 246) }
+.sh-copy a:hover { text-decoration: none }
+
